--- a/packages/components/calendar/src/select-month.scss
+++ b/packages/components/calendar/src/select-month.scss
@@ -39,7 +39,7 @@ sl-button {
 table {
   block-size: 100%;
   border-collapse: separate;
-  border-spacing: var(--sl-size-100);
+  border-spacing: var(--sl-size-010);
   box-sizing: content-box;
   inline-size: 100%;
   margin: 0;
@@ -92,7 +92,8 @@ button {
     background: color-mix(in srgb, var(--_bg-color), var(--_bg-mix-color) calc(100% * var(--_bg-opacity)));
     border: var(--sl-size-borderWidth-subtle) solid transparent;
     border-radius: var(--sl-size-borderRadius-default);
-    min-block-size: var(--sl-size-300);
+
+    // min-block-size: var(--sl-size-300);
     outline: transparent solid var(--sl-size-outlineWidth-default);
     outline-offset: var(--sl-size-outlineOffset-default);
     padding: calc(var(--sl-size-025) - var(--sl-size-borderWidth-subtle))
