--- a/packages/components/calendar/src/select-year.scss
+++ b/packages/components/calendar/src/select-year.scss
@@ -91,7 +91,6 @@ button {
     background: color-mix(in srgb, var(--_bg-color), var(--_bg-mix-color) calc(100% * var(--_bg-opacity)));
     border: var(--sl-size-borderWidth-subtle) solid transparent;
     border-radius: var(--sl-size-borderRadius-default);
-    min-block-size: var(--sl-size-300);
     outline: transparent solid var(--sl-size-outlineWidth-default);
     outline-offset: var(--sl-size-outlineOffset-default);
     padding: calc(var(--sl-size-025) - var(--sl-size-borderWidth-subtle))
